# vcs-style-flake8-extension

./: README.md  _types.py  flake8_vcs_ext.py  pyproject.toml  setup.py
.github/workflows/: checks.yml  publish.yml
tests/: bad_cases.py  good_cases.py  not_ok_cases.py  ok_cases.py  test_flake8_vcs_ext.py
