[tool.poetry]
name = "flake8_vcs_ext"
version = "1.0.0"
description = "Плагин flake8 с проверкой на дополнительные стандарты кода, принятые на проекте VCS"
authors = ["Debianov <regdeb@mail.ru>"]
readme = "readme.md"
license = "GPL-2.0 license"
classifiers = [
	"Framework :: Flake8",
	"Intended Audience :: Developers",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Software Development :: Quality Assurance",
	"Operating System :: OS Independent",
]

[tool.poetry.urls]
"Repository" = "https://github.com/GREEN-Corporation/vcs-style-flake8-extension"

[tool.poetry.plugins."entry_points.flake8.extension"]
"vcs0001" = "flake8_vcs_ext:Plugin"

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pytest = "^7.4.0"
mypy = "^1.4.1"
